--- a/playground/event-emit.html
+++ b/playground/event-emit.html
@@ -23,7 +23,6 @@
                     this.$emit('pass')
                 }
             },
-
         }
 
         var appContent = {
@@ -35,8 +34,7 @@
             }
         }
 
-
-        new Vue({
+        var vm = new Vue({
             el: '#app',
             components: {
                 'app-header': appHeader,
