--- a/playground/router.html
+++ b/playground/router.html
@@ -8,15 +8,40 @@
 <body>
 
     <div id="app">
-
+        <div>
+            <router-link to="/login">Login</router-link>
+            <router-link to="/main">Main</router-link>
+        </div>
+        <router-view></router-view>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
     <script>
+        var LoginComponet = {
+            template : '<h1>login</h1>'
+        }
+        var MainComponent = {
+            template: '<h1>main</h1>'
+        }
+
         var router = new VueRouter({
             // 페이지의 라우팅 정보
-            routes
+            routes : [
+                // 로그인 페이지 정보
+                {
+                    // 페이지의 url
+                    path: '/login',
+                    // 해당 url에서 표시될 컴포턴트
+                    component: LoginComponet
+                },
+                // 메인 페이지 정보
+                {
+                    path: '/main',
+                    component: MainComponent
+                    
+                }
+            ]
         })
 
         var vm = new Vue({
