--- a/playground/methods.html
+++ b/playground/methods.html
@@ -9,12 +9,16 @@
     <div id="app">
         <!-- <button v-on:click="메서드 이름">Click me</button> -->
         <button v-on:click="logText">Click me</button>
-        <input type="text" v-on:keyup.enter="logText">
+        <input type="text" v-on:keyup.enter="logText" v-model="input">
+        <p>{{ input }} </p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
         new Vue({
             el: '#app',
+            data:{
+                input: '',
+            },
             methods: {
                 logText: function(){
                     console.log('clicked');
